# dagster-playground

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.superset.yml  docker-compose.yaml  pyproject.toml  ruff.toml  setup.py
docker/hive/: metastore-site.xml
docker/localstack/: s3-bucket.sh
docker/metabase/: Dockerfile
docker/postgresql/: .02-pagila-data.sql.swp
docker/superset/scripts/: docker-init.sh
docker/trino/: config.properties  password.db
docker/trino/catalog/: delta.properties  hive.properties  iceberg.properties  memory.properties
docs/: trino-hive.md
notebooks/: delta-trino.ipynb  panda-trino.ipynb  s3-fsspec.ipynb
pagila_dbt/: dbt_project.yml  profiles.yml
pagila_dbt/models/: films_by_category.sql  orders_by_customer.sql  sales_by_film.sql  sales_by_staff.sql  sources.yml
quickstart_etl/: __init__.py
quickstart_etl/assets/: hackernews.py  iris_csv.py  pagila.py
quickstart_etl/assets/pagila/: __init__.py  dbt.py  source_data.py  trino.py
quickstart_etl/resources/: infra.py  parquet.py  snowflake.py  trino.py
quickstart_etl/trino_io_manager/: README.md  __init__.py  configs.py  db_client.py  fs.py  io_manager.py  resources.py  type_handlers.py  types.py
quickstart_etl/trino_io_manager/handlers/: __init__.py  arrow.py  data_type_mapping.py  delta_lake.py  parquet.py
quickstart_etl/trino_io_manager/utils/: arrow.py
quickstart_etl/trino_v2/: __init__.py  configs.py  io_manager.py  resources.py
quickstart_etl/trino_v2/handlers/: arrows.py  base.py  pandas.py
